# discovery-ce

./: .commitlintrc.json  .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT  NOTICE  PREPARING_YOUR_CHANGES.md  README.md  SECURITY.md  astro.config.mjs  codecov.yml  components.json  discovery.code-workspace  nx.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: api-tests.yml  codeql.yml  deploy-docs.yml  scorecard.yml
apps/api/: CHANGELOG.md  README.md  developer-guide.md  package.json  project.json  pyproject.toml
apps/api/discovery/: __init__.py  app.py  utils.py
apps/api/discovery/containers/: container.py  volume.py
apps/api/discovery/core/: __init__.py  celery.py  config.py  logger.py  pusher.py  s3.py
apps/api/discovery/db/: __init__.py  models.py  repository.py
apps/api/discovery/db/repositories/: runs.py
apps/api/discovery/routes/: runs.py  tasks.py
apps/api/discovery/runs/: registry.py  run.py
apps/api/discovery/tasks/projectdiscovery/: httpx.py  subfinder.py
apps/api/discovery/ws/: manager.py  runs.py
apps/api/tests/: test_container.py  test_container_volume.py  test_validate_ip.py
apps/discovery/: .eslintrc.json  CHANGELOG.md  jest.config.ts  package.json  project.json  tailwind.config.js  tsconfig.json
docker/: docker-compose.api.yml
docker/api/: .env.dev  Dockerfile  dind-rootless.Dockerfile
libs/shared/: CHANGELOG.md  package.json  project.json  (+1 more)
prisma/: CHANGELOG.md  package.json  project.json
public/: CNAME
(+83 files in other folders)
